--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   },
   "dependencies": {
     "gatsby": "^4.13.1",
+    "gatsby-plugin-image": "^2.14.0",
+    "gatsby-plugin-sharp": "^4.14.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-filesystem": "^4.14.0",
+    "gatsby-transformer-remark": "^5.14.0",
+    "gatsby-transformer-sharp": "^4.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
