--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^4.13.1",
     "gatsby-plugin-image": "^2.14.0",
+    "gatsby-plugin-manifest": "^4.17.0",
     "gatsby-plugin-sharp": "^4.14.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^4.14.0",
